crates/toml/tests/snapshots/invalid/integer/leading-zero-sign-3.stderr
TOML parse error at line 1, column 24
  |
1 | leading-zero-sign-3 = +0_1
  |                        ^
unexpected leading zero, expected nothing
